--- a/CSS/CssStyle.css
+++ b/CSS/CssStyle.css
@@ -1,3 +1,15 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+
+
+
+
+
+
+
 
 .header {
     padding: 30px 0 30px;
@@ -47,7 +59,7 @@
     padding: 5px;
     margin-left: 10px;
     margin right:100px;
-    font-size: 22px;
+    font-size: 50px;
   
   	color: white;  
   	text-decoration: none;
@@ -95,11 +107,39 @@
    background-color: rgba(89, 89, 89,0.5);
    color: white;
 }
+.container2 
+{
+	margin-top: 320px;
+	margin-left: 218px;
+}
+
+select
+{
+	/*margin-left : 50px;*/
+	
+	padding: 10px 50px ;
+	
+	text-align-last: center;
+	font-size: 15px;
+	margin-right: auto;
+	margin-left: 7px;
+	
 
 
-
-
-
-
+}
+.l1
+{
+	text-align: center;
+}
+.container2 button
+{
+	margin-left : 50px;
+	
+	padding: 10px 50px;
+	/*font-size: 15px;
+	margin-right: auto;
+	margin-left: 7px;
+	padding-left:10px*/
+}
 
 
