--- a/CSS/CssStyle.css
+++ b/CSS/CssStyle.css
@@ -3,18 +3,12 @@ html, body {
     overflow-x: hidden;
 }
 
-
-
-
-
-
-
-
-
 .header {
     padding: 30px 0 30px;
     position: absolute; /*we must change the position to absolute with the video position too*/
     min-height: 100px;
+    width: 100%;
+   /* display : none;*/
 }
 
 
@@ -29,36 +23,38 @@ html, body {
 
 
 .logo {
-    margin: 80px auto;
-    padding: 0 15px;
-    
+   
+    /*padding: 0 15px;*/
+    width: 93%;
     margin-bottom: 10px;
     display: inline-block;
+    height: 300px;
+    margin-top: 20px
 }
 
-#img1 {
+
+.hb {
    
     height: 150px;
     max-width: 100%;
-    padding: 0 4px;
+    padding: 0 37px;
+    float: left;
+    margin-left: 80px
 }
 
-.r-logo {
-    float: right;
-    margin-right: -1170px;
-    margin-top: 14px;
-  
-}
+
 .social a{
     background: #2b2626;
     min-width: 1em;
     text-align: center;
     border-radius: .2em;
+    float: right;
+
    
     opacity: 0.7;
     padding: 5px;
-    margin-left: 10px;
-    margin right:100px;
+    /*margin-left: 10px;*/
+    margin right:80px;
     font-size: 50px;
   
   	color: white;  
@@ -83,7 +79,7 @@ html, body {
 
 .subContainer1
 {
-    display: flex; /*it set our page responsive (fixed)*/     
+    display: flex; /*it set our page responsive (fixed)   */  
     margin-left: 170px;
 }
 
@@ -109,7 +105,7 @@ html, body {
 }
 .container2 
 {
-	margin-top: 320px;
+	margin-top: 222px;
 	margin-left: 218px;
 }
 
@@ -127,19 +123,22 @@ select
 
 
 }
-.l1
-{
-	text-align: center;
-}
+
 .container2 button
 {
 	margin-left : 50px;
 	
 	padding: 10px 50px;
-	/*font-size: 15px;
+/*	font-size: 15px;
 	margin-right: auto;
 	margin-left: 7px;
 	padding-left:10px*/
+
 }
 
+.page2
+{
+  display: none;
+
+}
 
